src/app/shop/product-details/product-details.component.css
.prev-arrow {
    background-color: transparent;
    position: fixed;
    z-index: 2;
    left: 0;
    top: 42%;
    padding-left: 15px;
}
.next-arrow {
    background-color: transparent;
    position: fixed;
    z-index: 2;
    right: 0;
    top: 42%;
    padding-right: 15px;
}
.grid-view {
    width: 40px;
    height: 40px;
    left: 30px;
    top: calc(100% - 55px);
    border-radius: 50%;
    position: absolute;
    z-index: 2;
    background-color: white;
    text-align: center;
    vertical-align: middle;
    cursor: pointer;
}
.grid-view:hover, .interior-grid-view:hover {
    cursor: pointer;
}
.grid-view:hover .grid-svg {
    fill: #f72464;
}
.grid-view:active, .grid-view:focus {
    outline: none;
}
.interior-grid-view {
    padding-top: 6px;
    cursor: pointer;
}
svg {
    cursor: pointer;
    fill: #c4c4c4;
}
svg:hover {
    fill: #f72464;
}
.logo-brand {
    background-color: transparent;
    position: absolute;
    z-index: 2;
    top: 0;
    left: 510px;
    width: 120px;
    height: 100px;
    background-color: white;
    border: 1px solid #e4dfde;
    box-shadow: 1px 1px 6px 0px #e4dfde;
    text-align: center;
}
.logo-text {
    padding-top: 3px;
    font-size: 6pt;
    text-transform: uppercase;
    color: #d7d6d6;
}
.logo {
    padding-top: 5px;
    cursor: pointer;
}
.container {
    padding-top: 10%;
    padding-left: 160px;
    padding-right: 10%;
    min-width: 350px;
}
.products-carousel {
    min-width: 500px;
    min-height: 650px;
    max-width: 500px;
    max-height: 650px;
}
.carousel-img {
    left: 0;
    top: 0;
    width: 100%;
    height: auto;
    max-width: 550px;
    max-height: 650px;
}
.col, .row {
    position: relative;
}
.col-sm-1.stock-col {
    text-align: center;
}
h5 {
    font: bold;
    font-size: 14pt;
}
h6 {
    color: #c4c4c4;
    font-size: 10pt;
}
.descr-line, .care-line, .price-line {
    font-size: 12pt;
}
.list-group-item {
    border: none;
    outline: none;
}
.stock-col {
    text-align: center;
}
.breadcrumb {
    background-color: white;
    padding: 0 0 15px 0;
    margin: 0;
}
.breadcrumb-item {
    padding-top: 7px;
}
.breadcrumb-item.active {
    cursor: default;
    color: #f72464;
}
.navbar-brand {
    padding-left: 15px;
}
a {
    color: #52575d;
}
a:hover {
    color: #f72464 !important;
    cursor: pointer;
}
h5, h6 {
    cursor: default;
}

